--- a/src/assets/scss/layouts/dashboard-layout.scss
+++ b/src/assets/scss/layouts/dashboard-layout.scss
@@ -16,9 +16,17 @@
     background-color: rgb(248, 249, 250);
     box-shadow: 0px 0.5rem 2rem rgba(0, 0, 0, 0.04);
     margin-left: -30rem;
+    position: fixed;
+    z-index: 99;
 
     @media only screen and (min-width: 900px) {
       margin-left: 0;
+      position: static;
+
+      .close-nav-button-wrapper {
+        display: none !important;
+      }
+      
     }
 
     &.toggle-navbar {
